# PyOctaveBand

./: .gitignore  CONTRIBUTING.md  Makefile  PyOctave.py  PyOctaveBand.py  README.md  filter_benchmark_report.md  generate_graphs.py  issues.json  issues_final.json  issues_new.json  issues_summary.txt  issues_summary_new.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  test.py
.github/: FUNDING.yml
.github/scripts/: comment_pr.py
.github/workflows/: manual_verify_install.yml  mirror.yml  python-app.yml  release.yml
scripts/: benchmark_filters.py
src/pyoctaveband/: __init__.py  calibration.py  core.py  filter_design.py  frequencies.py  parametric_filters.py  utils.py
tests/: conftest.py  test_advanced.py  test_audio_processing.py  test_basic.py  test_compatibility.py  test_coverage_fix.py  test_coverage_gap.py  test_errors_and_edge_cases.py  test_multichannel.py  test_parametric.py  test_parametric_filters.py  test_performance.py  test_signal_theory_limits.py
