[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyOctaveBand"
version = "0.1.0"
description = "Octave-Band and Fractional Octave-Band filter for signals in time domain."
readme = "README.md"
authors = [{ name = "Jose M. Requena Plens", email = "info@jmrplens.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.6.0",
    "matplotlib>=3.3.0",
]

[project.urls]
"Homepage" = "https://github.com/jmrplens/PyOctaveBand"
"Bug Tracker" = "https://github.com/jmrplens/PyOctaveBand/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Low sampling rate:UserWarning",
]

