[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyOctaveBand"
version = "1.0.0"
description = "Octave-Band and Fractional Octave-Band filter for signals in time domain."
...
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Low sampling rate:UserWarning",
]

