[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyOctaveBand"
version = "1.0.14"
authors = [
  { name="Jose Manuel Requena Plens", email="jmrplens@gmail.com" },
]
description = "Octave-Band and Fractional Octave-Band filter for signals in time domain."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/jmrplens/PyOctaveBand"
"Bug Tracker" = "https://github.com/jmrplens/PyOctaveBand/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Low sampling rate:UserWarning",
]